--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
     "type": "module",
     "name": "uljika",
-    "version": "2.3.1",
+    "version": "1.0.0",
     "private": true,
     "scripts": {
         "build": "tsc && react-router build",
         "build-storybook": "storybook build",
         "dev": "run-p vite dev:*",
-        "dev:scss": "typed-scss-modules -w app/**/*.module.scss --additionalData \"@use \\\"./app/_mantine\\\" as mantine;\"",
+        "dev:scss": "typed-scss-modules -w app/**/*.module.scss",
         "prepare": "husky",
         "preview": "vite preview",
         "sb": "run-p storybook dev:*",
         "storybook": "storybook dev -p 6006",
         "tauri": "tauri",
         "vite": "vite",
-        "lint:fix": "eslint \"app/**/*.{ts,tsx}\" --fix",
-        "format": "dprint fmt --diff"
+        "lint:fix": "eslint \"app/**/*.{ts,tsx}\" --fix --cache",
+        "format": "dprint fmt"
     },
     "commitlint": {
         "extends": [
@@ -28,59 +28,109 @@
         }
     },
     "dependencies": {
-        "@react-router/node": "^7.6.0",
-        "@react-router/serve": "^7.6.0",
+        "@hookform/resolvers": "^5.0.1",
+        "@radix-ui/react-accordion": "^1.2.10",
+        "@radix-ui/react-alert-dialog": "^1.1.13",
+        "@radix-ui/react-aspect-ratio": "^1.1.6",
+        "@radix-ui/react-avatar": "^1.1.9",
+        "@radix-ui/react-checkbox": "^1.3.1",
+        "@radix-ui/react-collapsible": "^1.1.10",
+        "@radix-ui/react-context-menu": "^2.2.14",
+        "@radix-ui/react-dialog": "^1.1.13",
+        "@radix-ui/react-dropdown-menu": "^2.1.14",
+        "@radix-ui/react-hover-card": "^1.1.13",
+        "@radix-ui/react-label": "^2.1.6",
+        "@radix-ui/react-menubar": "^1.1.14",
+        "@radix-ui/react-navigation-menu": "^1.2.12",
+        "@radix-ui/react-popover": "^1.1.13",
+        "@radix-ui/react-progress": "^1.1.6",
+        "@radix-ui/react-radio-group": "^1.3.6",
+        "@radix-ui/react-scroll-area": "^1.2.8",
+        "@radix-ui/react-select": "^2.2.4",
+        "@radix-ui/react-separator": "^1.1.6",
+        "@radix-ui/react-slider": "^1.3.4",
+        "@radix-ui/react-slot": "^1.2.2",
+        "@radix-ui/react-switch": "^1.2.4",
+        "@radix-ui/react-tabs": "^1.1.11",
+        "@radix-ui/react-toggle": "^1.1.8",
+        "@radix-ui/react-toggle-group": "^1.1.9",
+        "@radix-ui/react-tooltip": "^1.2.6",
+        "@react-router/node": "^7.5.3",
+        "@react-router/serve": "^7.5.3",
         "@tauri-apps/api": "^2.5.0",
-        "@tauri-apps/plugin-autostart": "~2.3.0",
+        "@tauri-apps/plugin-autostart": "~2.2.0",
         "@tauri-apps/plugin-process": "~2.2.1",
         "@tauri-apps/plugin-shell": "^2.2.1",
-        "isbot": "^5.1.28",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
+        "embla-carousel-react": "^8.6.0",
+        "input-otp": "^1.4.2",
+        "isbot": "^5.1.27",
+        "lucide-react": "^0.508.0",
+        "next-themes": "^0.4.6",
         "react": "^19.1.0",
+        "react-day-picker": "8.10.1",
         "react-dom": "^19.1.0",
-        "react-router": "^7.6.0"
+        "react-hook-form": "^7.56.3",
+        "react-router": "^7.5.3",
+        "recharts": "^2.15.3",
+        "sonner": "^2.0.3",
+        "tailwind-merge": "^3.2.0",
+        "vaul": "^1.1.2",
+        "zod": "^3.24.4"
     },
     "devDependencies": {
-        "@actions/github": "^6.0.1",
+        "@actions/github": "^6.0.0",
         "@chromatic-com/storybook": "^3.2.6",
-        "@commitlint/cli": "^19.8.1",
-        "@commitlint/config-conventional": "^19.8.1",
-        "@eslint/compat": "^1.2.9",
+        "@commitlint/cli": "^19.8.0",
+        "@commitlint/config-conventional": "^19.8.0",
+        "@editorjs/editorjs": "^2.30.8",
         "@eslint/eslintrc": "^3.3.1",
         "@eslint/js": "^9.26.0",
-        "@mantine/code-highlight": "^8.0.1",
-        "@mantine/core": "^8.0.1",
-        "@mantine/hooks": "^8.0.1",
-        "@mantine/modals": "^8.0.1",
+        "@lexical/react": "^0.31.0",
         "@octokit/rest": "^21.1.1",
-        "@react-router/dev": "^7.6.0",
-        "@semantic-release/exec": "^7.1.0",
+        "@react-router/dev": "^7.5.3",
+        "@semantic-release/exec": "^6.0.3",
         "@souhaildev/reactemojis": "^1.0.5",
-        "@storybook/addon-essentials": "8.6.14",
-        "@storybook/addon-interactions": "8.6.14",
-        "@storybook/addon-links": "8.6.14",
-        "@storybook/addon-onboarding": "8.6.14",
-        "@storybook/blocks": "8.6.14",
-        "@storybook/react": "8.6.14",
-        "@storybook/react-vite": "8.6.14",
-        "@storybook/test": "8.6.14",
+        "@storybook/addon-essentials": "^8.6.12",
+        "@storybook/addon-interactions": "^8.6.12",
+        "@storybook/addon-links": "^8.6.12",
+        "@storybook/addon-onboarding": "^8.6.12",
+        "@storybook/blocks": "^8.6.12",
+        "@storybook/builder-vite": "^8.6.12",
+        "@storybook/react": "^8.6.12",
+        "@storybook/react-vite": "^8.6.12",
+        "@storybook/test": "^8.6.12",
         "@tabler/icons-react": "^3.31.0",
-        "@tanstack/query-sync-storage-persister": "^5.76.1",
-        "@tanstack/react-query": "^5.76.1",
-        "@tanstack/react-query-persist-client": "^5.76.1",
+        "@tailwindcss/vite": "^4.1.5",
+        "@tanstack/query-sync-storage-persister": "^5.75.4",
+        "@tanstack/react-query": "^5.75.4",
+        "@tanstack/react-query-persist-client": "^5.75.4",
         "@tauri-apps/cli": "^2.5.0",
         "@tauri-apps/plugin-updater": "^2.7.1",
-        "@types/react": "^19.1.4",
-        "@types/react-dom": "^19.1.5",
-        "@types/react-transition-group": "^4.4.12",
+        "@tiptap/core": "^2.12.0",
+        "@tiptap/extension-placeholder": "^2.12.0",
+        "@tiptap/extension-text-align": "^2.12.0",
+        "@tiptap/extension-underline": "^2.12.0",
+        "@tiptap/pm": "^2.12.0",
+        "@tiptap/react": "^2.12.0",
+        "@tiptap/starter-kit": "^2.12.0",
+        "@types/bun": "^1.2.12",
+        "@types/eslint-plugin-jsx-a11y": "^6.10.0",
+        "@types/react": "^19.1.3",
+        "@types/react-dom": "^19.1.3",
+        "@types/react-syntax-highlighter": "^15.5.13",
         "@vitejs/plugin-react": "^4.4.1",
         "ansi-regex": "^6.1.0",
+        "bumpp": "^10.1.1",
         "conventional-changelog-conventionalcommits": "^8.0.0",
         "cz-conventional-changelog": "^3.3.0",
         "date-fns": "^4.1.0",
         "decimal.js": "^10.5.0",
-        "dprint": "^0.49.1",
+        "dprint": "^0.48.0",
         "eslint": "^9.26.0",
-        "eslint-import-resolver-typescript": "^4.3.4",
+        "eslint-import-resolver-typescript": "^3.10.1",
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-react": "^7.37.5",
@@ -88,36 +138,52 @@
         "eslint-plugin-react-refresh": "^0.4.20",
         "eslint-plugin-storybook": "^0.12.0",
         "fast-deep-equal": "^3.1.3",
-        "globals": "^16.1.0",
+        "framer-motion": "^12.10.4",
+        "globals": "^16.0.0",
         "husky": "^9.1.7",
-        "knip": "^5.56.0",
+        "immer": "^10.1.1",
+        "jiti": "^2.4.2",
+        "knip": "^5.54.1",
+        "lexical": "^0.31.0",
+        "lint-staged": "^15.5.2",
         "marked": "^15.0.11",
         "mdast": "^3.0.0",
         "mdast-util-find-and-replace": "^3.0.2",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.5.3",
-        "postcss-preset-mantine": "^1.17.0",
         "postcss-simple-vars": "^7.0.1",
+        "react-error-boundary": "^5.0.0",
         "react-flip-numbers": "^3.0.9",
-        "react-markdown": "^10.1.0",
-        "react-transition-group": "^4.4.5",
+        "react-markdown": "^9.1.0",
+        "react-resizable-panels": "^3.0.1",
+        "react-shiki": "^0.6.0",
+        "rehype-pretty-code": "^0.14.1",
         "remark-breaks": "^4.0.0",
         "remark-emoji": "^5.0.1",
         "remark-gfm": "^4.0.1",
-        "sass": "^1.89.0",
+        "remix-themes": "^2.0.4",
+        "sass": "^1.87.0",
+        "scroll-into-view-if-needed": "^3.1.0",
         "semantic-release": "^24.2.3",
-        "storybook": "8.6.14",
-        "storybook-addon-mantine": "^5.0.0",
+        "shiki": "^3.4.0",
+        "storybook": "^8.6.12",
         "storybook-css-modules": "^1.0.8",
         "storybook-dark-mode": "^4.0.2",
+        "tailwindcss": "^4.1.5",
+        "taurpc": "^1.8.1",
         "ts-unused-exports": "^11.0.1",
+        "tw-animate-css": "^1.2.9",
         "typed-scss-modules": "^8.1.1",
         "typescript": "^5.8.3",
-        "typescript-eslint": "^8.32.1",
+        "typescript-eslint": "^8.32.0",
         "unist-builder": "^4.0.0",
         "unist-util-visit": "^5.0.0",
+        "use-immer": "^0.11.0",
         "vite": "^6.3.5",
         "vite-tsconfig-paths": "^5.1.4",
         "zustand": "^5.0.4"
+    },
+    "lint-staged": {
+        "*.{ts,tsx,js,json,md,toml}": "dprint fmt"
     }
 }
